# bisc

./: .gitignore  BUILDING.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  README  ralph-reset.sh  ralph.sh
.cargo/: config.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
bisc-app/: Cargo.toml
bisc-app/src/: app.rs  file_sharing.rs  main.rs  screen_share.rs  settings.rs  video.rs  voice.rs
bisc-app/tests/integration/: channel_lifecycle.rs  file_sharing.rs  graceful_degradation.rs  helpers.rs  main.rs  reconnection.rs  voice_call.rs
bisc-files/: Cargo.toml
bisc-files/src/: lib.rs  store.rs  swarm_download.rs  transfer.rs
bisc-media/: Cargo.toml
bisc-media/src/: app_audio.rs  audio_io.rs  camera.rs  congestion.rs  control.rs  fragmentation.rs  jitter_buffer.rs  lib.rs  negotiation.rs  opus_codec.rs  screen_capture.rs  share_pipeline.rs  transport.rs  video_codec.rs  video_pipeline.rs  video_types.rs  voice_pipeline.rs
bisc-media/tests/: audio_io.rs  control.rs  negotiation.rs  share_pipeline.rs  transport.rs  video_pipeline.rs  voice_pipeline.rs
bisc-net/: Cargo.toml
bisc-net/src/: channel.rs  connection.rs  endpoint.rs  gossip.rs  lib.rs  testing.rs  transport.rs
bisc-net/src/sim/: mod.rs  network.rs  peer.rs  transport.rs
bisc-net/tests/: channel_lifecycle.rs  endpoint_gossip.rs  peer_connections.rs  sim_integration.rs
bisc-protocol/: Cargo.toml
bisc-protocol/src/: channel.rs  file.rs  lib.rs  media.rs  ticket.rs  types.rs
bisc-ui/: Cargo.toml
bisc-ui/src/: lib.rs  video_grid.rs  video_surface.rs
bisc-ui/src/screens/: call.rs  channel.rs  files.rs  mod.rs  settings.rs
learnings/: index.md
learnings/iced/: verify-app-launches.md
learnings/iroh/: endpoint-online-before-ticket.md  file-availability-gossip-pattern.md  gossip-leave-detection-timing.md  gossip-peer-discovery-reannounce.md  iroh-blobs-for-file-transfer.md  memorylookup-for-relay-disabled.md  plumbing-not-connected.md  router-owns-accept-loop.md  spawn-connection-attempts.md
learnings/media/: nokhwa-system-deps.md  opus-codec-startup-distortion.md  scap-system-deps.md
learnings/media/platform/: cpal-alsa-dev-headers.md
learnings/platform/: scap-linux-api-bugs.md  windows-wgpu-backend.md
packaging/linux/: appimage.sh  bisc.desktop
packaging/macos/: Info.plist  bundle.sh  create-dmg.sh
tasks/DONE/: BISC-001-cargo-workspace-scaffold.md  BISC-002-wire-protocol-types.md  BISC-003-iroh-endpoint-gossip-setup.md  BISC-004-channel-lifecycle.md  BISC-005-direct-peer-connections.md  BISC-006-audio-io.md  BISC-007-opus-encoding-decoding.md  BISC-008-mediapacket-datagram-transport.md  BISC-009-audio-jitter-buffer.md  BISC-010-media-negotiation.md  BISC-011-media-control-channel.md  BISC-012-voice-call-pipeline.md  BISC-013-camera-capture.md  BISC-014-video-encoding-decoding.md  BISC-015-frame-fragmentation-reassembly.md  BISC-016-video-surface-shader-widget.md  BISC-017-video-grid-layout.md  BISC-018-video-call-pipeline.md  BISC-019-screen-capture.md  BISC-020-scoped-audio-capture.md  BISC-021-screen-share-pipeline.md  BISC-022-file-storage-sqlite.md  BISC-023-file-chunking-transfer.md  BISC-024-peer-assisted-downloads.md  BISC-025-settings-persistence.md  BISC-026-ui-channel-screen.md  BISC-027-ui-call-view.md  BISC-028-ui-file-sharing.md  BISC-029-ui-settings-screen.md  BISC-030-app-shell-navigation.md  BISC-031-congestion-adaptive-bitrate.md  BISC-032-static-linking-packaging.md  BISC-033-integration-tests-multi-peer.md  BISC-034-simulation-harness.md  BISC-035-test-performance-reliability.md  BISC-036-iced-application-shell.md  BISC-036.1-fix-iced-entrypoint.md  BISC-037-channel-event-subscription.md  BISC-038-voice-call-integration.md  BISC-039-video-call-integration.md  (+22 more)
tasks/TODO/: BISC-001-cargo-workspace-scaffold.md  BISC-002-wire-protocol-types.md  BISC-003-iroh-endpoint-gossip-setup.md  BISC-004-channel-lifecycle.md  BISC-005-direct-peer-connections.md  BISC-006-audio-io.md  BISC-007-opus-encoding-decoding.md  BISC-008-mediapacket-datagram-transport.md  BISC-009-audio-jitter-buffer.md  BISC-010-media-negotiation.md  BISC-012-voice-call-pipeline.md  BISC-013-camera-capture.md  BISC-014-video-encoding-decoding.md  BISC-015-frame-fragmentation-reassembly.md  BISC-016-video-surface-shader-widget.md  BISC-017-video-grid-layout.md  BISC-018-video-call-pipeline.md  BISC-019-screen-capture.md  BISC-020-scoped-audio-capture.md  BISC-021-screen-share-pipeline.md  BISC-022-file-storage-sqlite.md  BISC-023-file-chunking-transfer.md  BISC-024-peer-assisted-downloads.md  BISC-025-settings-persistence.md  BISC-026-ui-channel-screen.md  BISC-027-ui-call-view.md  BISC-028-ui-file-sharing.md  BISC-029-ui-settings-screen.md  BISC-030-app-shell-navigation.md  BISC-031-congestion-adaptive-bitrate.md  BISC-032-static-linking-packaging.md  BISC-033-integration-tests-multi-peer.md  BISC-034-simulation-harness.md  BISC-036-iced-application-shell.md  BISC-037-channel-event-subscription.md  BISC-038-voice-call-integration.md  BISC-039-video-call-integration.md  BISC-040-screen-share-integration.md  BISC-041-file-sharing-integration.md  BISC-042-app-audio-capture.md  (+19 more)
