[workspace]
members = [
    "bisc-app",
    "bisc-files",
    "bisc-media",
    "bisc-net",
    "bisc-protocol",
    "bisc-ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Shared dependencies pinned at workspace level
anyhow = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
postcard = { version = "1", features = ["alloc"] }

# Internal crates
bisc-protocol = { path = "bisc-protocol" }
bisc-net = { path = "bisc-net" }
bisc-media = { path = "bisc-media" }
bisc-files = { path = "bisc-files" }
bisc-ui = { path = "bisc-ui" }
