[workspace]
members = [
    "bisc-app",
    "bisc-files",
    "bisc-media",
    "bisc-net",
    "bisc-protocol",
    "bisc-ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Shared dependencies pinned at workspace level
anyhow = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
postcard = { version = "1", features = ["alloc"] }
sha2 = "0.10"
data-encoding = "2"
iroh = "0.96"
iroh-gossip = "0.96"
n0-future = "0.3"
rand = "0.9"
cpal = "0.15"
opus = "0.3"
audiopus_sys = { version = "0.2", features = ["static"] }
nokhwa = { version = "0.10", features = ["input-native"] }
openh264 = "0.9"
scap = "0.1.0-beta.1"
iced = { version = "0.14", features = ["wgpu"] }
bytemuck = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"

# Internal crates
bisc-protocol = { path = "bisc-protocol" }
bisc-net = { path = "bisc-net" }
bisc-media = { path = "bisc-media" }
bisc-files = { path = "bisc-files" }
bisc-ui = { path = "bisc-ui" }
