[package]
name = "bisc-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
audio = ["bisc-media/audio"]
video = ["bisc-media/video"]
video-codec = ["bisc-media/video-codec"]
screen-capture = ["bisc-media/screen-capture"]

[[bin]]
name = "bisc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bisc-files.workspace = true
clap.workspace = true
data-encoding.workspace = true
bisc-media.workspace = true
bisc-net.workspace = true
iroh-blobs.workspace = true
bisc-protocol.workspace = true
bisc-ui.workspace = true
iced.workspace = true
iroh.workspace = true
rfd.workspace = true
directories.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
bisc-net = { workspace = true, features = ["test-util"] }
iroh.workspace = true
iroh-blobs.workspace = true
tempfile.workspace = true

[lints.clippy]
all = { level = "deny", priority = -1 }
