[package]
name = "bisc-protocol"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
data-encoding.workspace = true
postcard.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints.clippy]
all = { level = "deny", priority = -1 }
